--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
             <div class="bike">Arrastra aqui la bicicleta</div>
         </div>
     </div>
+    <p>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:100px;height:40px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                alt="¡CSS Válido!" />
+        </a>
+    </p>
+    <p>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:100px;height:40px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="¡CSS Válido!" />
+        </a>
+    </p>
+
     <script>
         const auto = document.querySelector('.coche')
         const moto = document.querySelector('.moto')
@@ -56,9 +69,7 @@
         motorbike.addEventListener('drop', e => {
             motorbike.appendChild(moto)
         })
-        
     </script>
-
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik">
     </script>
     <script src="script.js"></script>
